--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,8 @@
 # Created by .ignore support plugin (hsz.mobi)
+test/
+test.py
+temp.py
+
 ### Python template
 # Byte-compiled / optimized / DLL files
 __pycache__/
